assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');

*{  border:0;
    margin:0;
    padding:0;

}

.body {
    color: #343A40 ;
    font-family: 'Roboto','Open Sans', 'Helvetica Neue', sans-serif;
}

/* -------------------------------------------------------------------------------------------- Header*/


/* Logo */
.fa-laptop-code{
    margin: 8px;
}

.fa-laptop-code:hover {
    color: #D46D4E;
}

.navbar-brand {
    float: left;
    font-size: 20px;
    font-weight: 300;
    letter-spacing:2px;
    margin-left: 30px;
}

.navbar-dark .navbar-brand:hover {
    color: #D46D4E;
}

/* Navbar */

.nav-item {
    color: #fafafa;
    font-weight: 300;
    letter-spacing:2px;
    margin-left: 30px;
}

.nav-item:hover {
    color: #D46D4E;
    text-decoration: none;
}

.nav-item a.active {
     color: #D46D4E !important;
}

.work-nav {
    margin-right: 200px;
    display: inline-block;
}


/* Navbar toggler */

.custom-toggler .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
} 

.custom-toggler.navbar-toggler {
    border-color: #fafafa;
}
/* -------------------------------------------------------------------------------------------- Footer*/

.footer {
    color: #fafafa;
    background-color: #343A40;
    display: flex;
}

.fixed-bottom {
    bottom: 0;
    left:0;
    position: fixed;
    right: 0;
    z-index:1030;
}

.footer-title {
    text-align: center;
    line-height: 30px;
    font-weight: 300;
    letter-spacing:2px;
}

.fab {
    color: #fafafa;
    margin-right: 0.5em;
    line-height: 40px;
}

.fab:hover {
    color: #D46D4E;
}

/* --------------------------------------------------------------------------------------------About me */

/* Hero image */

html, body, .hero-image .hero-text{ 
     height: 100%;

}

.hero-image {
    background-image: url('assets/images/css/florence_hero_image.jpeg') no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

    justify-content: center;
    position: relative;
    margin-top: -80px;
    top: 12%;
    bottom: -400%;
    width: 100%;
    height: 100%;
}

 .hero-text {
  color: #fafafa;
  font-family:'Roboto','Open Sans', 'Helvetica Neue', sans-serif;
  text-align: left;
  margin-left: 100px;
  margin-top: 350px;
  top:100%;
} 

h1 {
    font-size: 120px;
}


h2 {
    font-size: 50px;
}

.lead .blockquote {
    font-size: 100px;
}


/* Typewriter effect */

#typewriter {
  color:  #fafafa;
  font-family: 'Roboto','Open Sans', 'Helvetica Neue', sans-serif;
  overflow: hidden; 
  border-right: .05em solid #D46D4E;
  white-space: nowrap;
  margin: 0 auto; 
  letter-spacing: .05em;
  animation: typing 5s steps(60), blink-caret 5s;
}

@keyframes typing {
  from { width: 0 }
  to { width:100% }
}

@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: #D46D4E }
}

.badge-success {
    background-color: #D46D4E;
}

.lead {
    color:#343A40;
}

/* --------------------------------------------------------------------------------------------Expertise */

.expertise-title {
    font-weight: 500;
    text-align : center;
    margin-top: 100px;
    color :#5E90A4;
    letter-spacing:10px;
}

.card {
    margin: 40px;
}

.card-header{
    background-color:#5E90A4;
    font-weight: 200;
}

.card-title {
    font-weight: 300;
}

/*Progress bar*/

.skillset-photo {
  max-width: 400px;
  margin-left : 20px; 
  margin-bottom: 100px;
  height: auto;
}

.progress-grid {
    margin-bottom:200px;
    margin-top: 100px;

}

.progress-bar {
    width:100px;
    background-color : #D46D4E;
}

.progress-label {
  float: right;
  margin-right: 3em;
  font-size: 20px;
  font-weight: 200;
}

/* -------------------------------------------------------------------------------------------- Projects */

.timeline {
    display: block;
    margin: 150px 50px 150px 0px;
}

.timeline-date {
    color: #D46D4E;
    font-weight: bold;
}

.img-fluid {
    max-width: 80px;
}

.project-title {
    font-weight: 500;
    text-align : center;
    margin-top: 150px;
    color:#5E90A4;
    letter-spacing:10px;
}


.projects-photo {
    max-width: 400px;
    margin-top: 200px;
    margin-right: 120px; 
}

.album {
    margin-bottom:200px;
}

.card-album {
    margin:-150px;
}

.text-tech {
    color : #D46D4E;
    font-size: 20px;
    font-weight: 100;
}

/* -------------------------------------------------------------------------------------------- Contact*/

/*Form*/

.contact-title {
    font-weight: 500;
    color: #5E90A4;
    letter-spacing:10px;
}

.required-input:after {
    content: "*" ;
    color: #e32;
    content: ' *';
    display:inline;
}

#form-details {
    background-color: #F8F9FA;
    border-radius: 50%;
    margin-top: 200px;
    padding-right: 100px;
    padding-left : 100px;
}

.form-label {
    color: #D46D4E;
    font-size: 20px;
    font-weight: 400;
}

.form-control {
    font-weight :200;
    font-size: 15px;
}

#btn-send {
    background-color: #D46D4E;
    margin-top: 50px;
    margin-bottom: 25px;
}

/*Testimonies*/

.testimony {
    margin-top: 50px;
    text-align: center;
    background-color : #A3B7BE;
    margin-bottom: 200px;
    padding-top : 100 px;
    padding-bottom : 100 px;
}

.testimony-card {
    padding : 20px;

}

.testimony-photo {
    max-width: 100px;
    border-radius: 50%;
    position: relative;
}

.testimony-title {
    font-size: 20px;
}

.btn-testimony {
    color: #5E90A4;
}

/* -------------------------------------------------------------------------------------------- Media queries*/

@include media-breakpoint-between(sm, md) {

}

